[v1.2.2] fixed drop down overflowing by trip advisor widget

--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@ Theme Name: tourtiger
 Theme URI: http://tourtiger.wpengine.com
 Description: child theme of genesis from git
 Author: tourtiger
-Version: 1.2.1
+Version: 1.2.2
 Template: genesis
 Template Version: 2.0.27
 GitHub Theme URI: https://github.com/matjnewton/tourtiger
 License: GPL-2.0+
 License URI: http://www.opensource.org/licenses/gpl-license.php
 */
+
+.btn-group.book-btn-wrapper {
+    z-index: 9!important;
+}
 
 .layout_nowrap .gform-footer__controll.gform-field {
     flex-grow: 0;
